--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+:root{
+  --main-color : #FF715B;  
 }
 
 body {
@@ -15,10 +21,487 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: #fff;
-  font-family: sans-serif;
+  font-family: 'noto-serif', serif;
+  overflow-x: hidden;
 }
 
 img {
   max-width: 100%;
   height: auto;
 }
+
+.container{
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a{
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+}
+
+.btn{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #FFFFFF;
+  background: var(--main-color);
+  transition: all 0.4s ease;
+  border: 1px solid var(--main-color);
+}
+
+.btn:hover{
+  color: var(--main-color);
+  background-color: transparent;
+}
+
+.site-header{
+  padding: 36px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-list{
+  display: flex;
+  align-items: center;
+}
+
+.log-in{
+  display: flex;
+  align-items: center;
+}
+
+.logo-img{
+  width: 175px;
+  height: 45px;
+}
+
+.nav-item{
+  margin-left: 70px;
+}
+
+.nav-link{
+  font-size: 18px;
+  line-height: 25px;
+  color: #2C2C2C;
+  transition : color 0.4s ease;
+}
+
+.log-in-link{
+  font-size: 18px;
+  line-height: 25px;
+  color: #2C2C2C;
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+  border-right: 1px solid #F1E0DD;
+  margin-right: 15px;
+  transition : color 0.4s ease;
+}
+
+.log-in-link span{
+  display: inline-block;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  color: #2C2C2C;
+  transition : color 0.4s ease;
+}
+
+.log-in-search{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  font-size: 21px;
+  color: #2C2C2C;
+  transition : color 0.4s ease;
+}
+
+.nav-link:hover , .log-in-link:hover , .log-in-link:hover span , .log-in-search:hover{
+  color: var(--main-color);
+}
+
+.nav-link , .log-in-link , .log-in-search{
+  background-color: transparent;
+}
+
+.site-hero{
+  position: relative;
+}
+
+.hero-texts{
+  background-image: url('../img/hero-bg.svg');
+  background-size: contain;
+  height: 714px;
+  padding-top: 205px;
+  padding-left: 97px;
+}
+
+.hero-title{
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 80px;
+  color: #2C2C2C;
+}
+
+.hero-btn{
+  padding: 13px 37px;
+  margin-top: 36px;
+  display: inline-block;
+}
+
+.hero-info{
+  display: flex;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.hero-sliders{
+  display: flex;
+  align-items: center;
+}
+
+.hero-sliders button{
+  width: 35px;
+  height: 35px;
+  color: var(--main-color);
+  font-size: 20px;
+  border: 2px solid #F5EBE9;
+  background-color: transparent;
+  transition: all 0.4s ease;
+  display: inline-block;
+}
+
+.hero-sliders button:hover{
+  border-color: var(--main-color);
+  background-color: var(--main-color);
+  color: #fff;
+}
+
+.hero-sliders button.active{
+  border-color: var(--main-color);
+  background-color: var(--main-color);
+  color: #fff;
+}
+
+.slider-left{
+  margin-right: 15px;
+}
+
+.hero-sliders::after{
+  content: "";
+  display: inline-block;
+  width: 167px;
+  height: 2px;
+  background: #F5EBE9;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.page-count{
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 33px;
+  color: var(--main-color);
+}
+
+form{
+  width: 847px;
+  height: 110px;
+  padding: 32px;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  transform: translateY(-10%);
+  box-shadow: 0px 10px 30px 5px rgba(219, 200, 197, 0.2);
+}
+
+.input-box{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+select{
+  height: 40px;
+  width: 240px;
+  border: none;
+  color: var(--main-color);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+input{
+  height: 40px;
+  width: 240px;
+  color: var(--main-color);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  border: none;
+  padding-left: 5px;
+  border-bottom: 1px solid #F5EBE9;
+}
+
+input[type="date"]::after{
+  content: "";
+  display: inline-block;
+  background-image: url('../img/calender.svg');
+  width: 15px;
+  height: 15px;
+  background-size: cover;
+}
+
+.input-box:nth-child(3)::after{
+  content: "";
+  position: absolute;
+  background-image: url('../img/dollar-sign.svg');
+  width: 10px;
+  height: 15px;
+  background-size: cover;
+  top: 40px;
+  right: 5px;
+}
+
+.input-box:nth-child(3) input::placeholder{
+  color: var(--main-color);
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
+label{
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 19px;
+  color: #A79997;
+  margin-bottom: 10px;
+}
+
+.site-tutorial{
+  padding-top: 128px;
+  padding-bottom: 128px;
+}
+
+.tutorial-list{
+  display: flex;
+  justify-content: center;
+}
+
+.tutorial-item{
+  width: 233px;
+  height: 233px;
+  text-align: center;
+  padding-top: 32px;
+  background: #F8F8F8;
+  padding-left: 28px;
+  padding-right: 28px;
+  transition: all 0.4s ease;
+  margin-right: 22px;
+}
+
+.tutorial-item:last-child{
+  margin-right: 0;
+}
+
+.tutorial-item:hover{
+  background-color: #fff;
+  filter: drop-shadow(0px 12px 30px rgba(200, 180, 180, 0.2));
+}
+
+.tutorial-item::before{
+  content: "";
+  display: inline-block;
+  background-image: url('../img/map.svg');
+  width: 92px;
+  height: 92px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.tutorial-item:nth-child(2)::before{
+  background-image: url('../img/binocular.svg');
+}
+
+.tutorial-item:nth-child(3)::before{
+  background-image: url('../img/backpack.svg');
+}
+
+.tutorial-item:nth-child(4)::before{
+  background-image: url('../img/ukelele.svg');
+}
+
+.tutorial-title{
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 24px;
+  text-align: center;
+  color: #2C2C2C;
+  margin-bottom: 14px;
+  margin-top: 7px;
+}
+
+.tutorial-text{
+  font-family: sans-serif;
+  font-size: 13px;
+  line-height: 19px;
+  text-align: center;
+  color: #A79997;
+}
+
+#destinations{
+  padding: 35px 0;
+  position: relative;
+  margin-bottom: 128px;
+}
+
+#destinations::after{
+  content: "";
+  position: absolute;
+  width: 100vw;
+  height: 356px;
+  top: 0;
+  left: calc(50% + 210px);
+  background: #F7F7F7;
+  z-index: -5;
+}
+
+.site-destinations{
+  display: flex;
+  justify-content: space-between;
+}
+
+.destinations-texts{
+  width: 300px;
+  margin-right: 55px;
+}
+
+.destinations-title{
+  font-weight: 800;
+  font-size: 35px;
+  line-height: 50px;
+  color: #2C2C2C;
+  margin-bottom: 30px;
+}
+
+.destinations-title span{
+  color: var(--main-color);
+}
+
+.destinations-text{
+  font-family: sans-serif;
+  font-size: 13px;
+  line-height: 19px;
+  color: #A79997;
+  margin-bottom: 43px;
+}
+
+.destinations-btn{
+  padding: 14px 24px;
+  display: inline-block;
+}
+
+.destinations-list{
+  display: flex;
+}
+
+.destinations-item{
+  width: 236px;
+  height: 286px;
+  position: relative;
+  background-image: url('../img/cuba.svg');
+  background-size: cover;
+  margin-left: 21px;
+}
+
+.destinations-item:nth-child(2){
+  background-image: url('../img/paris.svg');
+}
+
+.destinations-item:nth-child(3){
+  background-image: url('../img/japan.svg');
+}
+
+.destinations-place{
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+  position: absolute;
+  bottom: 21px;
+  left: 21px;
+  color: #FFFFFF;
+}
+
+.site-about{
+  padding: 32px 0 56px 105px;
+}
+
+.about-imgs{
+  position: relative;
+  width: 446px;
+  height: 596px;
+}
+
+.about-imgs::before{
+  content: "";
+  position: absolute;
+  background-image: url('../img/circle.svg');
+  width: 40px;
+  height: 40px;
+  background-size: contain;
+  left: -105px;
+  top: 50%;
+}
+
+.about-imgs::after{
+  content: "";
+  position: absolute;
+  background-image: url('../img/Rectangle-yellow.svg');
+  width: 101px;
+  height: 101px;
+  background-size: contain;
+  right: 0;
+  top: -32px;
+  z-index: -1;
+}
+
+.lighthouse-img{
+  width: 407px;
+  height: 500px;
+  position: relative;
+}
+
+.pattern{
+  position: absolute;
+  background-image: url('../img/pattern.svg');
+  width: 121px;
+  height: 121px;
+  background-size: contain;
+  left: -57px;
+  bottom: 40px;
+  z-index: -1;
+}
+
